plugins {
    id "io.ratpack.ratpack-java" version '1.10.0-milestone-3'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
}

group = 'com.sergeybochkov'
version = '2.0'

apply plugin: 'java'

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

repositories() {
    mavenCentral()
}

dependencies {
    implementation 'org.postgresql:postgresql:42.3.1'
    implementation 'com.zaxxer:HikariCP:5.0.1'
    implementation 'com.jcabi:jcabi-jdbc:0.17.6'
    implementation 'commons-io:commons-io:2.11.0'
    implementation 'ch.qos.logback:logback-classic:1.2.10'
    implementation 'commons-cli:commons-cli:1.5.0'
    implementation 'io.pebbletemplates:pebble:3.1.5'

    compileOnly 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'

    testCompileOnly 'org.projectlombok:lombok:1.18.22'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'

}

mainClassName = "sb.lilies.App"
